--- a/islam-is-reqire/response.html
+++ b/islam-is-reqire/response.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="fa">
+
 <head>
     <meta charset="UTF-8">
     <title>چت با ملحد</title>
     <link rel="stylesheet" href="../base/chats/chat.css">
 </head>
+
 <body>
     <div class="chat-container" id="chat"></div>
-    <audio id="sendSound" src="../base/chats/public/get.mp3" controls style="display:none;"></audio>
-    <audio id="receiveSound" src="../base/chats/public/send.wav" controls style="display:none;"></audio>
+    <audio id="sendSound" src="../base/chats/public/get.wav" controls style="display:none;"></audio>
+    <audio id="receiveSound" src="../base/chats/public/send.mp3" controls style="display:none;"></audio>
     <script src="../base/chats/chat.js"></script>
     <script>
         const messagesProject1 = [
             {
                 sender: "other",
-                text: "سلام من یک سوال داشتم درمورد اسلام",
+                text: "سلام سه چهار تا سوال داشتم درمورد اسلام",
                 readTime: 1500
             },
             {
@@ -28,7 +30,7 @@
                 یکی اینکه مگه اسلام ادعا نکرده لا اکراه فی الدین؟
                 پس چرا داره حجاب رو اجبار میکنه
                 `,
-                readTime: 4000
+                readTime: 2500
             },
             {
                 sender: "me",
@@ -39,6 +41,63 @@
 «لا اکراه فی الدین» هم دقیقاً یعنی زور نمی‌شه کسی رو مسلمون کرد. 
 پس اجبار بیرونی هیچ منطقی نداره.
   `,
+                readTime: 7000
+            },
+            {
+                sender: "other",
+                text: `
+                سوال دومم سوره احذاب آیه 59
+
+ چرا گفته همسران؟ این ینی نه تنها خود پیامبر چند همسر داشته بلکه تو قران داره تبلیغ این کار رو هم میکنه
+                `,
+                readTime: 2000
+            },
+            {
+                sender: "me",
+                text: `
+ببین، در واقع هدف اصلی دین اینه که مردها و زن‌ها هر دو به حد ممکن رفتار خودشونو کنترل کنن. 
+اینکه آیات بیشتر به زن‌ها اشاره کرده، دلیلش اینه که شرایط اون زمان و جامعه، دسترسی مردها به هر چیزی محدود بود ولی زنان بیرون از خونه هم حضور داشتن. 
+یعنی دستور به زن‌ها بیشتر دیده میشه چون مستقیماً تأثیرش رو روی جامعه میذاشت.
+`,
+                readTime: 5000
+            },
+            {
+                sender: "other",
+                text: `
+                    سه
+اینکه چرا به جای اینکه تلاش کنه مردا رو از چشم چرونی دور کنه داره زنا رو وادار میکنه که خودشونو بپوشونن؟ مگه این کارا مشکل مردا نیست؟
+                `,
+                readTime: 2000
+            },
+            {
+                sender: "me",
+                text: `
+در مورد چشم‌چرونی هم همینه؛ یعنی دین میگه همه باید مواظب نگاه خودشون باشن. 
+آیات به زنان تاکید بیشتری کردن چون لباس و پوشش مستقیم روی جلوگیری از تحریک مردها تأثیر داشت، اما این اصلاً یعنی مردها بی‌تقصیر هستن؛ خودشون هم مسئولیت دارن.
+`,
+                readTime: 5000
+            },
+            {
+                sender: "other",
+                text: `
+                    دو سه تا ایه بود درمورد چشم چرونی مردا و جلوگیری
+ولی ده تا ایه درمورد حجاب زنا بود
+بازم همون حرفم معنی میده
+
+از لحاظ اصولی باید برعکس باشه
+باید مردارو از چشم چرونی و چیزا جنسی دور کنه حالا از اونجایی که این اتفاق هیچوقت 100 درصد تو یه جامعه نمیوفته به زنا هم یه توصیه ای راجب این چیزا بکنه ولی هدف اصلیش مرد ها باشه
+
+مثل این میمونه به جای اینکه پلیس دزد هارو پیدا کنه بیوفته دنبال خونه هایی که قفل ندارن اونارو جریمه کنه
+                `,
+                readTime: 1500
+            },
+            {
+                sender: "me",
+                text: `
+حالا مثال پلیس هم دقیقا اینجوریه: پلیس اول دزدها رو کنترل میکنه ولی به خونه‌هایی که قفل ندارن هم یه هشدار میده. 
+دین هم اول مردها رو مسؤول میدونه ولی برای زن‌ها هم توصیه‌هایی گذاشته که جامعه امن‌تر باشه. 
+پس منطقی و عادلانه‌ست، حتی اگه ظاهراً تمرکز روی زن‌ها بیشتر باشه.
+`,
                 readTime: 5000
             },
             {
@@ -56,4 +115,5 @@
         initChat(messagesProject1);
     </script>
 </body>
+
 </html>
