--- a/islam-is-reqire/response.html
+++ b/islam-is-reqire/response.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="fa">
-
 <head>
     <meta charset="UTF-8">
     <title>چت با ملحد</title>
     <link rel="stylesheet" href="../base/chats/chat.css">
 </head>
-
 <body>
     <div class="chat-container" id="chat"></div>
     <audio id="sendSound" src="../base/chats/public/get.wav" controls style="display:none;"></audio>
@@ -22,7 +20,7 @@
             {
                 sender: "me",
                 text: "در خدمتدم بفرمایید ",
-                readTime: 1800
+                readTime: 1500
             },
             {
                 sender: "other",
@@ -30,7 +28,7 @@
                 یکی اینکه مگه اسلام ادعا نکرده لا اکراه فی الدین؟
                 پس چرا داره حجاب رو اجبار میکنه
                 `,
-                readTime: 2500
+                readTime: 3000
             },
             {
                 sender: "me",
@@ -41,7 +39,7 @@
 «لا اکراه فی الدین» هم دقیقاً یعنی زور نمی‌شه کسی رو مسلمون کرد. 
 پس اجبار بیرونی هیچ منطقی نداره.
   `,
-                readTime: 7000
+                readTime: 8000
             },
             {
                 sender: "other",
@@ -50,24 +48,27 @@
 
  چرا گفته همسران؟ این ینی نه تنها خود پیامبر چند همسر داشته بلکه تو قران داره تبلیغ این کار رو هم میکنه
                 `,
-                readTime: 2000
+                readTime: 3000
             },
-            {
-                sender: "me",
-                text: `
-ببین، در واقع هدف اصلی دین اینه که مردها و زن‌ها هر دو به حد ممکن رفتار خودشونو کنترل کنن. 
-اینکه آیات بیشتر به زن‌ها اشاره کرده، دلیلش اینه که شرایط اون زمان و جامعه، دسترسی مردها به هر چیزی محدود بود ولی زنان بیرون از خونه هم حضور داشتن. 
-یعنی دستور به زن‌ها بیشتر دیده میشه چون مستقیماً تأثیرش رو روی جامعه میذاشت.
+{
+    sender: "me",
+    text: `
+ وقتی قرآن میگه «همسران»، منظورش این نیست که می‌خواد چندهمسری رو تبلیغ کنه. پیامبر یه آدم معمولی نبود، مسئولیت‌های اجتماعی و حمایتی داشت. اون زمان کاملاً عادی بود که مردا چند همسر داشته باشن، مخصوصاً برای اینکه زنای بی‌سرپرست و بیوه‌ها سرپناه داشته باشن. حتی خیلی از بزرگان و سردارها هم همین کارو می‌کردن.  
+
+پس این کار پیامبر هم یه جور وظیفه اجتماعی بود، نه اینکه بخواد خوش‌گذرونی کنه.
 `,
-                readTime: 5000
-            },
+    readTime: 9000
+}
+
+
+            ,
             {
                 sender: "other",
                 text: `
                     سه
 اینکه چرا به جای اینکه تلاش کنه مردا رو از چشم چرونی دور کنه داره زنا رو وادار میکنه که خودشونو بپوشونن؟ مگه این کارا مشکل مردا نیست؟
                 `,
-                readTime: 2000
+                readTime: 5000
             },
             {
                 sender: "me",
@@ -75,7 +76,7 @@
 در مورد چشم‌چرونی هم همینه؛ یعنی دین میگه همه باید مواظب نگاه خودشون باشن. 
 آیات به زنان تاکید بیشتری کردن چون لباس و پوشش مستقیم روی جلوگیری از تحریک مردها تأثیر داشت، اما این اصلاً یعنی مردها بی‌تقصیر هستن؛ خودشون هم مسئولیت دارن.
 `,
-                readTime: 5000
+                readTime: 8000
             },
             {
                 sender: "other",
@@ -89,7 +90,7 @@
 
 مثل این میمونه به جای اینکه پلیس دزد هارو پیدا کنه بیوفته دنبال خونه هایی که قفل ندارن اونارو جریمه کنه
                 `,
-                readTime: 1500
+                readTime: 10000
             },
             {
                 sender: "me",
@@ -98,7 +99,7 @@
 دین هم اول مردها رو مسؤول میدونه ولی برای زن‌ها هم توصیه‌هایی گذاشته که جامعه امن‌تر باشه. 
 پس منطقی و عادلانه‌ست، حتی اگه ظاهراً تمرکز روی زن‌ها بیشتر باشه.
 `,
-                readTime: 5000
+                readTime: 8000
             },
             {
                 sender: "other",
@@ -115,5 +116,4 @@
         initChat(messagesProject1);
     </script>
 </body>
-
 </html>
