fix key localstorage who wrrite quran

--- a/who-wrriting-quran-muhammad-of-allah/response.html
+++ b/who-wrriting-quran-muhammad-of-allah/response.html
@@ -20,7 +20,7 @@
       <div class="card card--claim">
         <h2># ادعا 1</h2>
         <div class="video-wrapper">
-          <video id="claim1" src="./claim-part1.mp4" controls></video>
+          <video id="claim1" data-key="claim--who-writing-quran-part1" src="./claim-part1.mp4" controls></video>
         </div>
       </div>
 
@@ -81,7 +81,7 @@
       <div class="card card--claim">
         <h2># ادعا 2</h2>
         <div class="video-wrapper">
-          <video id="claim2" src="./claim-part2.mp4" controls></video>
+          <video id="claim2" data-key="claim--who-writing-quran-part2" src="./claim-part2.mp4" controls></video>
         </div>
       </div>
 
@@ -134,7 +134,7 @@
       <div class="card card--claim">
         <h2># ادعا 3</h2>
         <div class="video-wrapper">
-          <video id="claim3" src="./claim-part3.mp4" controls></video>
+          <video id="claim3" data-key="claim--who-writing-quran-part3" src="./claim-part3.mp4" controls></video>
         </div>
       </div>
 
