edit project with tailwind color

--- a/MiddleEast-is-home-prophet/response.html
+++ b/MiddleEast-is-home-prophet/response.html
@@ -55,21 +55,19 @@
           اونهارو هم شما بی دین می دونین؟
         </p>
 
-        <p>
+        <div class="flex gap-x-2">
           <a
             href="https://mohammadiko33.github.io/Questions-islam/124-prophet-of-islam-whattt/response.html"
             target="_blank"
-            style="color: #008bb6;"
             >مرتبط با 124,000 پیامبر</a
           >
           <br />
           <a
             href="https://mohammadiko33.github.io/Questions-islam/Behasht-in-qatar/response.html"
             target="_blank"
-            style="color: #008bb6;"
             >مرتبط با بهشت</a
           >
-        </p>
+        </div>
       </div>
 
       <!-- نکات تکمیلی -->
