--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="item" style="order: 1;">
       <a href="https://mohammadiko33.github.io/Questions-islam">
-        <img src="./base/previous.png" alt="صفحه قبل" />
+        <img src="./base/public/previous.png" alt="صفحه قبل" />
         <div class="gradient"></div>
         <div class="text">صفحه قبل</div>
       </a>
