no iman with read quran

--- a/just-one-quran-or-not/response.html
+++ b/just-one-quran-or-not/response.html
@@ -100,6 +100,7 @@
             videoId: "claim1",
             answerId: "answer1",
             hintId: "hint",
+            hintId: "extraBox",       // نکات تکمیلی
             watchHintId: "hint"
         });
     </script>
