quran after 200 year islam

--- a/empty-quran/response.html
+++ b/empty-quran/response.html
@@ -49,9 +49,7 @@
 
             <p>این نوع ستاره‌ها پولسار نام گرفتند که به معنای ستاره تپنده است. شگفت‌انگیزتر اینکه خداوند ۱۴۰۰ سال قبل در
                 قرآن از ستاره‌ای به نام طارق سخن گفته است.</p>
-            <div class="img-block">
-                <img src="./evidence/5.jpg" alt="سوره طارق">
-            </div>
+                <img src="./evidence/5.jpg" alt="سوره طارق" style="border-radius: 1rem;">
 
             <p>خداوند این ستاره را طارق نامیده و آن را نوری شکافنده توصیف کرده است. طارق در زبان عربی به معنای «کوبنده»
                 یا کسی است که در هنگام شب می‌کوبد.</p>
