add one message other quran create by human

--- a/quran-create-by-human/response.html
+++ b/quran-create-by-human/response.html
@@ -18,6 +18,11 @@
                 readTime: 2500
             },
             {
+                sender: "other",
+                text: "همش دروغه و تمام این ها برای اینکه یک عده ای از مردم سوء استفاده کنن",
+                readTime: 2500
+            },
+            {
                 sender: "me",
                 text: "چرا داری این جرف رو میزنی ؟",
                 readTime: 1500
