add one other message to quran create by human

--- a/quran-create-by-human/response.html
+++ b/quran-create-by-human/response.html
@@ -60,13 +60,17 @@
             },
             {
                 sender: "me",
-                text: "اونم در زمانی که پیامبر اسلام حتی سواد خوندن و نوشتن نداشته",
-                readTime: 2000
+                text: "و اینقدر دقیق بیاد به این موضوع اشاره بکنه ",
+                readTime: 1500
             },
             {
                 sender: "me",
-                text: "و اینقدر دقیق بیاد به این موضوع اشاره بکنه ",
-                readTime: 1500
+                text: `
+                همین قرآن و همین موارد به فردی نازل شده که حتی سواد خوندن و نوشتن نداشته 
+                و هیچ وقتم نگفته بیایید منو بپرستید گفته برو خدا رو بپرست ، گفته برو ایمانتو زیاد کن ، توکلتو زیاد کن ، راه درستو در پیش بگیر
+                تا سعادتمند بشی و کلی موارد دیگه درمورد ماوراء الطبیعه و کهکشان ها گفته شده که هنوز هم که هنوزه به خیلی هاش علم دست پیدا نکرده و به مرور زمان و با پیشرفت تکنولوژی داره به اون دست پیدا میکنه نتیجه می گیریم اگه میخایم چیزی را رد کنیم بهتره قبلش تحقیق کنیم
+                `,
+                readTime: 14_000 
             },
             {
                 sender: "me",
