fix step by step html bug

--- a/who-wrriting-quran-muhammad-of-allah/response.html
+++ b/who-wrriting-quran-muhammad-of-allah/response.html
@@ -206,7 +206,7 @@
     ];
 
     // اجرای فانکشن
-    setLocalItemStep({ watchHintId: "hint", steps });
+    setLocalItemStep({ watchHintId: "hint", videoId: "who-wrriting-quran-muhammad-of-allah",  steps });
   </script>
 </body>
 </html>
