fix image bug scientific review of quran verse

--- a/scientific-review-of-quran-verse/response.html
+++ b/scientific-review-of-quran-verse/response.html
@@ -79,7 +79,7 @@
         <p>در سال 1677 میلادی کشف میکنه که برای باروری نیاز به ترکیب اسپرم مرد و تخمک زنه</p>
         <p>تا قبل از اون مردم فکر میکردند جنین فقط از مایع منی مرد یا از خون قاعدگی زن تشکیل میشه</p>
         <p>اما قرآن هزار سال قبل از اون در آیه 13 سوره مومنون به نطفه یعنی ترکیب اسپرم مرد و تخمک زن اشاره میکنه</p>
-        <img src="./evidence/23.jpg" alt="دکتر آرتور هرتیگ">
+        <img src="./evidence/23.jpg" alt="آیه 13 سوره مومنون ">
         <p>در سال 1956 دکتر آرتور هرتیگ استاد دانشگاه هاروارد و همکارش جان راک</p>
         <div class="img-block">
           <img src="./evidence/24.jpg" alt="دکتر آرتور هرتیگ">
@@ -95,19 +95,20 @@
         <img src="./evidence/27.jpg" alt="his wilhelm">
         <p>با کمک میکروسکوپ کشف میکنه که جنین در هفته های 4 تا 6 بارداری شبیه به توده ای نا منظم مثل گوشت جویده شده است
         </p>
+        <img src="./evidence/28.gif" alt="مضغه گوشت جویده شده">
         <p>اما قرآن 1200 سال قبل از هیس در آیه 14 سوره مومنون جنین را در این مرحله مضغه نامیده یعنی گوشت جویده شده است
         </p>
-        <img src="./evidence/28.jpg" alt="14 soreh momnon">
+        <img src="./evidence/29.jpg" alt="14 soreh momnon">
         <div class="img-block">
-          <img src="./evidence/29.jpg" alt="مضغه">
-          <img src="./evidence/30.jpg" alt="گوشت جویده شده">
+          <img src="./evidence/30.jpg" alt="مضغه">
+          <img src="./evidence/31.jpg" alt="گوشت جویده شده">
         </div>
         <p>این شواهد نشون میده که قرآن نه ساخته بشر بلکه از سوی خالقی آگاهه که بر همه جزئیات علم تسلط داره همینطور که
           خداوند</p>
         <p>در آیه 53 سوره فصلت میگه :</p>
-        <img src="./evidence/31.jpg" alt="14 soreh momnon">
-        <p>به زودی نشانه های خود را از افق ها و در جان هایشان به آنان نشان خواهیم داد تا برای آنان آشکار گردد که حق با
-          اوست</p>
+        <img src="./evidence/32.jpg" alt="14 soreh momnon">
+        <h3>به زودی نشانه های خود را از افق ها و در جان هایشان به آنان نشان خواهیم داد تا برای آنان آشکار گردد که حق با
+          اوست</h3>
       </div>
     </div>
 
