--- a/scientific-review-of-quran-verse/response.html
+++ b/scientific-review-of-quran-verse/response.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>سوتی های قرآن زیر زره بین علم</title>
+  <title>سوتی های قرآن زیر ذره‌بین علم</title>
   <link rel="stylesheet" href="../base/base.css">
 </head>
 <body>
   <div class="container">
-    <h1 class="page-title">سوتی های قرآن زیر زره بین علم</h1>
+    <h1 class="page-title">سوتی های قرآن زیر ذره‌بین علم</h1>
     <div id="hint" class="watch-hint" aria-live="polite">
       برای دیدن پاسخ و ادامه، ویدیوها را به ترتیب کامل تماشا کنید.
     </div>
