add extrabox to two project and fix app image bug

--- a/scientific-review-of-quran-verse/response.html
+++ b/scientific-review-of-quran-verse/response.html
@@ -19,6 +19,7 @@
       <div class="card card--claim">
         <h2># ادعا 1</h2>
         <div class="video-wrapper"><video id="claim1" data-key="claim--part1" src="./claim-part1.mp4" controls>
+            <!-- خلاصه ادعا اینکه مراحل شکل گیری که توی سوره مومنون اومده رو زیر سوال میبره به قول خودش و میگه درست نیست -->
         </div>
       </div>
 
@@ -59,7 +60,8 @@
           <img src="./evidence/20.png" alt="منیزیمه">
         </div>
         <p>به راستی شباهت 99 درصدی عناصر تشکیل دهنده بدن انسان و گل که مخلوط آب و خاکه دلیل بر صدق ادعای خداوند نیست که
-          <strong>میگه شمارا از گل خلق کردیم</strong> ؟</p>
+          <strong>میگه شمارا از گل خلق کردیم</strong> ؟
+        </p>
         <img src="./evidence/21.jpg" alt="گل">
       </div>
     </div>
@@ -111,6 +113,35 @@
           اوست</h3>
       </div>
     </div>
+
+    <!-- نکات تکمیلی -->
+    <div id="extraBox" class="extra-box hidden mt-2">
+      <h2>نکات تکمیلی</h2>
+      <ul>
+        <!-- 🔹 یک سوم اول: خلاصه مقاله -->
+        <li>قرآن در سوره مومنون مراحل شکل‌گیری جنین را توضیح داده که شامل نطفه، علقه (چسبیدن مثل زالو) و مضغه (گوشت
+          جویده‌شده) است.</li>
+        <li>علم مدرن نشان داده جنین واقعاً در روزهای 5 تا 7 به دیواره رحم می‌چسبد و در هفته‌های 4 تا 6 شبیه مضغه می‌شود.
+        </li>
+        <li>بدن انسان از همان عناصری ساخته شده که در خاک وجود دارد: اکسیژن، کربن، هیدروژن، نیتروژن، کلسیم، سدیم، پتاسیم
+          و ...</li>
+
+        <!-- 🔹 دو سوم دوم: دلایل قانع‌کننده و اضافه -->
+        <li>تشابه عناصر بدن انسان و خاک نه‌تنها یک حقیقت علمی امروز است، بلکه دقیقاً با عبارت قرآنی «شما را از گل
+          آفریدیم» مطابقت دارد.</li>
+        <li>قرآن در زمانی این مطالب را بیان کرده که نه میکروسکوپی وجود داشت و نه کسی از نقش تخمک زن در باروری خبر داشت.
+        </li>
+        <li>دانشمندانی مثل آنتونی فان لیوونهوک (1677) و ویلهلم هیس (1890) تازه بعد از قرن‌ها توانستند کشفیات ابتدایی در
+          این زمینه داشته باشند.</li>
+        <li>این هماهنگی بین متن قرآن و علم امروز، احتمال تصادفی بودن یا ساخته شدن توسط یک فرد عادی در ۱۴۰۰ سال پیش را
+          صفر می‌کند.</li>
+        <li>آیه 53 سوره فصلت صریحاً وعده داده که «نشانه‌های خداوند در جهان و در وجود انسان آشکار خواهد شد» که دقیقاً با
+          پیشرفت علم پزشکی و جنین‌شناسی محقق شده است.</li>
+        <li>بنابراین، آنچه به عنوان «سوتی» معرفی می‌شود، در واقع نمونه‌ای از اعجاز علمی قرآن است که با گذر زمان روشن‌تر
+          می‌شود.</li>
+      </ul>
+    </div>
+
 
   </div>
 
